tests/pos/i7342/Second_2.scala
def h(m: Int) = g(m)
