tests/neg/i7758.scala
def f: Int = implicitly: Int